// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectItem test1 1`] = `
<div
  className="mb-4"
>
  <UNDEFINED
    button={
      <FloatingLabelInput__Box>
        <FloatingLabelInput__Input
          error={false}
          onChange={null}
          type="text"
        />
        <FloatingLabelInput__Label />
      </FloatingLabelInput__Box>
    }
    menu={
      <SelectItem__Ul>
        <li
          onClick={[Function]}
        >
          None
        </li>
        <li
          onClick={[Function]}
        >
          item1
        </li>
        <li
          onClick={[Function]}
        >
          item2
        </li>
      </SelectItem__Ul>
    }
  />
  <DefaultInput__Message
    className="my-1"
  >
    <UNDEFINED
      error={false}
      touched={false}
      warning={false}
    />
  </DefaultInput__Message>
</div>
`;

exports[`SelectItem test2, touched, error - true 1`] = `
<div
  className="mb-4"
>
  <UNDEFINED
    button={
      <FloatingLabelInput__Box>
        <FloatingLabelInput__Input
          error={
            Object {
              "id": "app.containers.HomePage.title",
            }
          }
          onChange={null}
          type="text"
        />
        <FloatingLabelInput__Label />
      </FloatingLabelInput__Box>
    }
    menu={
      <SelectItem__Ul>
        <li
          onClick={[Function]}
        >
          None
        </li>
        <li
          onClick={[Function]}
        >
          item1
        </li>
        <li
          onClick={[Function]}
        >
          item2
        </li>
      </SelectItem__Ul>
    }
  />
  <DefaultInput__Message
    className="my-1"
  >
    <UNDEFINED
      error={
        Object {
          "id": "app.containers.HomePage.title",
        }
      }
      touched={true}
      warning={false}
    />
  </DefaultInput__Message>
</div>
`;
